Body w/ overflow:hidden to avoid circles extending the game area when drawn at the edges

--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+body{
+    background-color: #eee;
+    overflow: hidden;
+}
+
 #game{
     display: none;
 }
